# Jarvis

./: .dockerignore  .env.example  .env.prod.example  .env.template  .gitignore  AUTHENTICATION_COMPLETE.md  AUTH_DEMO.py  BIBLE_JARVIS_1WEEK_ROADMAP.md  CELERY_INTEGRATION_GUIDE.md  CELERY_QUICK_REFERENCE.md  DAY1_COMPLETION_SUMMARY.md  DAY6_COMPLETION_SUMMARY.md  DAY6_IMPLEMENTATION_GUIDE.md  DAY7_CODE_REVIEW.md  DAY7_COMPLETION_SUMMARY.md  DAY7_IMPLEMENTATION_GUIDE.md  DOCUMENTATION_SUMMARY.md  Dockerfile.beat  Dockerfile.worker  JARVIS_RESUME_ENTRY.tex  LAUNCH_GUIDE.md  MIGRATION_COMPLETE.md  QUICKSTART_INTEGRATION.txt  QUICK_REFERENCE.md  README.md  REDIS_QUICKSTART.md  RESTRUCTURE_SUMMARY.py  alembic.ini  celery_app.py  celery_beat_schedule.py  celery_config.py  celery_monitoring.py  celery_tasks.py  config.py  conftest.py  database_optimizer.py  db_sqlalchemy.py  docker-compose.dev.yml  docker-compose.redis.yml  docker-compose.yml  (+19 more)
.github/workflows/: deploy.yml  test.yml
Jarvis_Frontend/: package-lock.json
SPCC_exp09/: A.ASM  main.py
agents/: __init__.py  base_agent.py  daily_aggregator.py  data_collector.py  forecaster.py  insight_generator.py  interventionist.py  orchestrator.py  pattern_detector.py
alembic/: env.py
alembic/versions/: 18d5d564eb00_initial_migration.py  4fa512c6942b_initial_tables.py
app/: __init__.py  jarvis_router.py  main.py
app/api/: __init__.py
app/api/v1/: auth.py  (+5 more)
app/auth/: __init__.py  auth_bearer.py  auth_handler.py  security.py
app/core/: __init__.py  config.py  database.py  redis.py
app/db/: __init__.py
app/middleware/: Caching.py  cache_manager.py  performance_monitor.py  rate_limiter.py
app/models/: __init__.py  conversation.py  document.py  event.py  intervention.py  pattern.py  user.py
core/: __init__.py  simple_jarvis_db.py
dc/: app.py  delayed_attack_batch.ps1  delayed_attack_report.json  deploy.sh  s1.err  s2.err  s3.err  test.ps1  test.sh
docs/: API_ENDPOINTS.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_FINAL.md  CELERY_QUICK_REF.md  CELERY_SETUP_GUIDE.md  CLEANUP_REPORT.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  FREE_DEPLOYMENT_GUIDE.md  FRONTEND_BACKEND_CONNECTION.md  INTEGRATION_GUIDE.md  MINOR_ITEMS_COMPLETE.md  QUICK_ANSWER.md
k8s/: deployment.yaml  service.yaml
monitoring/: __init__.py  docker-compose.monitoring.yml  prometheus.yml
scripts/: check_dbs.py  dispatch_run_all.py  start_redis.ps1
sonarqube/: docker-compose.sonar.yml  sonar-project.properties
src/: __init__.py  main.py
tests/: test_integration.py  test_orchestrator.py
(+7 files in other folders)
